# abot

./: .env.dev  .env.prod  .gitignore  README.md  config.yml  dump.rdb  pyproject.toml
abot/: browser.py  message.py  permission.py  qq.py  rule.py  setup.py  store.py
abot/plugins/: ping.py  translate.py
abot/plugins/admin/: __init__.py
abot/plugins/nokia/: __init__.py
assets/shui/: text.txt
plugins/: coin.py  fan.py  flash.py  grey.py  help.py  kiss.py  listen.py  ping.py  repeat.py  revoke.py  rua.py  shui.py  today.py  translate.py  weather.py
plugins/admin/: __init__.py
plugins/anti/: __init__.py
plugins/festival/: __init__.py
plugins/leetcode/: __init__.py  leetcode.py
plugins/loss/: __init__.py
plugins/nokia/: __init__.py  nokia.py
plugins/setu/: __init__.py
plugins/task/: __init__.py
plugins/tictactoe/: __init__.py  chess.py
scripts/: test.ipynb  test.py
